k8s/apps/grafana/src/k8s/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: grafana
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`ndw2982.isis.cclrc.ac.uk`) && PathPrefix(`/grafana`)
      middlewares:
        - name: strip-grafana-prefix
      services:
        - kind: Service
          name: grafana
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-grafana-prefix
  namespace: grafana
spec:
  stripPrefix:
    prefixes:
      - /grafana
